--- a/evie_mini_project_8/index.html
+++ b/evie_mini_project_8/index.html
@@ -8,6 +8,9 @@
 
   </head>
   <body>
+    <div class="boxdiv">
+      <p class = "text">move mouse to move green bubble</p>
+    </div>
 
     <script type="text/javascript" src= "script.js"></script>
   </body>
