--- a/evie_mini_project_8/index.html
+++ b/evie_mini_project_8/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="boxdiv">
-      <p class = "text">move mouse to move green bubble</p>
+      <p class = "text">move mouse to move colorful bubble</p>
     </div>
 
     <script type="text/javascript" src= "script.js"></script>
