--- a/evie_mini_project_8/index.html
+++ b/evie_mini_project_8/index.html
@@ -10,6 +10,10 @@
   <body>
     <div class="boxdiv">
       <p class = "text">move mouse to move colorful bubble</p>
+      <h1 class = "songTitle"> Happy - Taeyeon</h1>
+      <audio controls autoplay>
+        <source src="happy_song.mp3" type="audio/mpeg">
+      </audio>
     </div>
 
     <script type="text/javascript" src= "script.js"></script>
