--- a/evie_mini_project_8/index.html
+++ b/evie_mini_project_8/index.html
@@ -9,7 +9,14 @@
   </head>
   <body>
     <div class="boxdiv">
-      <p class = "text">move mouse to move colorful bubble</p>
+      <p class = "text">move mouse to move colorful pixels</p>
+      <h1 class = "songTitle"> Happy - Taeyeon</h1>
+      <audio controls autoplay>
+        <source src="happy_song.mp3" type="audio/mpeg">
+      </audio>
+
+
+      </audio>
     </div>
 
     <script type="text/javascript" src= "script.js"></script>
