--- a/project_B/index.html
+++ b/project_B/index.html
@@ -9,6 +9,34 @@
 
   </head>
   <body>
+    <body style="background-color: black;">
+      <div class="img-container">
+        <img src="libs/butterfly.jpeg" alt="" style:"align:left">
+        <p class = "text"> Kat Von D Tattoo Inspired Designs</p>
+        <img src="libs/butterfly2.jpg" alt="" style:"align:right">
+      </div>
+
+    <div class="navigationDiv">
+      <ul>
+        <li><a class="text3" href="index.html">home</a></li>
+        <li><a class="text3" href="kat.html">kat von d</a></li>
+        <li><a class="text3" href="design.html">tattoo design process</a></li>
+        <li><a class="text3" href="gallery.html">gallery</a></li>
+      </ul>
+    </div>
+    <div class="bannerDiv">
+      <p class = "text2">Welcome To My Tattoo Website!!</p>
+    </div>
+
+    <div class="box">
+      <img src="libs/art.jpg" alt="">
+      <p class ="text4" style= >For this project, I hope to guide people through the process of designing a tattoo. Art has always been such a major part of my life. Since I was a child, I would always doodle and draw (especially on test papers). I loved to draw flowers, eyes, butterflies, people, etc. Painting became very important to me. Painting was a way to relieve stress and express the emotions that my words could not. I cannot remember the exact age I was when I fell in love with tattoos. The idea of having permanent art on my body seemed so beautiful to me. As an art lover, what more could I want than to have my body be adorned with artwork forever. My desire for tattoos started with simple drawings on my hands during classes (which my dad did not like). I eventually ventured into the realm of “stick n pokes,” a nuanced DIY take on traditional hand-poked tattoos. I hand-poked my first tattoo when I was 15 years old: a sun. I eventually began to add more and more, until it became an obsession. As I grew older, I began to appreciate tattoos more and more, beyond their visual aesthetics. I discovered how meaningful tattoos could be across cultures.My greatest wish was to turn 18 so that I could get a real tattoo. My parents were not very fond of my love for tattoos, but that did not deter me. My very first tattoo was a lotus with my mother’s Chinese name, 鄭友蓮. To me, no other tattoo could have been more meaningful. I understand how many people still view tattoos as taboo or signs of “mischief,” but I wish to expel those stereotypes. At least to me, tattoos are artwork. My skin is simply the canvas. </p>
+      </div>
+
+    <button class="buttons" onclick="document.location='p5.html'">design your own tattoo!!</button>
+    <center>
+      <img src="libs/flower.png" alt="">
+    </center>
 
     <script type="text/javascript" src= "script.js"></script>
   </body>
