--- a/project_B/index.html
+++ b/project_B/index.html
@@ -38,6 +38,6 @@
       <img src="libs/flower.png" alt="">
     </center>
 
-    <script type="text/javascript" src= "script.js"></script>
+    <!-- <script type="text/javascript" src= "script.js"></script> -->
   </body>
 </html>
